--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Build
+        run: python3 setup.py sdist
       - name: Release
         uses: pypa/gh-action-pypi-publish@master
         with:
