--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build
-        run: python3 setup.py sdist
+        run: |
+          pip install -U pip setuptools
+          python3 setup.py sdist
       - name: Release
         uses: pypa/gh-action-pypi-publish@master
         with:
