--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Build
         run: |
-          pip install -U pip setuptools
+          sudo apt-get install -y python3-setuptools
           python3 setup.py sdist
       - name: Release
         uses: pypa/gh-action-pypi-publish@master
