--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Build
         run: |
           sudo apt-get install -y python3-setuptools
-          python3 setup.py sdist
+          PACKAGE_VERSION=0.0.2 python3 setup.py sdist
       - name: Release
         uses: pypa/gh-action-pypi-publish@master
         with:
