--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.8'
-      - name: Install dependencies
+      - name: Run Tests
+        run: python -m unittest
+      - name: Install Deployment Dependencies
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           echo ${GITHUB_REF#refs/tags/}
