--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,6 @@ jobs:
       - name: Install Deployment Dependencies
         if: startsWith(github.ref, 'refs/tags/')
         run: |
-          echo ${GITHUB_REF#refs/tags/}
-          echo ${{ github.ref }}
           python -m pip install --upgrade pip
           pip install wheel twine
       - name: Build and publish
@@ -32,5 +30,5 @@ jobs:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          PACKAGE_VERSION=0.0.3 python3 setup.py sdist bdist_wheel
+          PACKAGE_VERSION=${GITHUB_REF#refs/tags/} python3 setup.py sdist bdist_wheel
           twine upload dist/*
